vlib/v/checker/tests/cast_to_ref_struct_err.out
vlib/v/checker/tests/cast_to_ref_struct_err.vv:9:12: error: cannot cast `int literal` to referenced struct
    7 |
    8 | fn main() {
    9 |         mut r := &Row(10)
      |                  ~~~~~~~~
   10 |         r.id = 50
   11 |         println(r)
