vlib/v/checker/tests/cast_to_ref_struct_err.vv
module main

pub struct Row {
pub mut:
    id int
}

fn main() {
		mut r := &Row(10)
		r.id = 50
		println(r)
}
